@@ -3,6 +3,9 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.13
 
+	- The IPP backend now reports printer state/error
+	  conditions when possible (toner low, media empty,
+	  etc.)
 	- The lpstat command now supports the (undocumented)
 	  IRIX -l option ("-lprintername") for a compact job
 	  listing for a printer.
